# dxvk

./: meson.build  meson_options.txt  package-win-debug.bat  package-win.bat
include/: VkSubmitThreadCallback.h
include/openxr/: meson.build
src/d3d9/: d3d9_device.cpp  d3d9_spec_constants.h  meson.build
src/d3d9/shaders/: tf2vr_controller_model_frag.frag  tf2vr_controller_model_vert.vert  tf2vr_vr_quad_frag.frag  tf2vr_vr_quad_vert.vert
src/dxvk/: dxvk_adapter.cpp  dxvk_extensions.h  dxvk_instance.cpp  dxvk_queue.cpp  dxvk_state_cache.cpp
src/tf2vr/: HMDInterface.cpp  HMDInterface.h  OpenVRDirectMode.cpp  OpenXRDirectMode.cpp  OpenXRDirectMode.h  VRCompositor.cpp  VRCompositor.h  VRControllerModel.cpp  VRControllerModel.h  VRLaserPointer.cpp  VRLaserPointer.h  hmdWrapper.h  hud_position_shared.h
src/util/log/: log.cpp
